# d-rk3588-npu

./: .gitignore
docs/: chat.py  week1.md  week2_worker.md
model_test/: chat.py  inspect_model.py  model_graph.py  qwen1.5b_layout.txt
models/: download_qwen1.5b.py  model_graph.py
test/: chat.py
worker/: CMakeLists.txt  build-linux.sh
worker/include/: cpu_ops.h  half.h  npu_matmul.h  qwen2.h  weight_loader.h
worker/lib/rknpu2/: rknpu.mk
worker/src/: cpu_ops.cpp  main.cpp  npu_matmul.cpp  qwen2.cpp  weight_loader.cpp
